samples/_failures_safe/1761644820_0b0195_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ac74b75.c: In function ‘execute_graph_operation’:
./samples/SAFE/__tmp_5ac74b75.c:156:10: error: expected ‘)’ at end of input
  156 |     if (g
      |        ~ ^
      |          )
./samples/SAFE/__tmp_5ac74b75.c:156:5: error: expected declaration or statement at end of input
  156 |     if (g
      |     ^~
